# kairos-trading

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  GUIDE.md  KAIROS_MOBILE_SPECS.md  KAIROS_TRADING_SPECS.md  README.md  alembic.ini  docker-compose.caddy.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
adapters/cache/: redis.py
adapters/database/: models.py  repository.py
adapters/exchanges/: base.py  binance_rest.py  binance_ws.py
adapters/notifications/: firebase.py  telegram.py
ai_agent/: Dockerfile  agent.py  config.py  main.py  provider.py  telegram_handler.py  tools.py
ai_agent/analysts/: __init__.py  base_analyst.py  context_analyst.py  momentum_analyst.py  risk_analyst.py  runner.py  technical_analyst.py
api/: deps.py  main.py
api/auth/: jwt.py  password.py
api/middleware/: rate_limit.py
api/routers/: ai_reports.py  alerts.py  auth.py  backtests.py  bot.py  daily_stats.py  market.py  portfolio.py  settings.py  strategies.py  trades.py  websocket.py
api/schemas/: auth.py  common.py  strategies.py  trades.py
api/services/: bot_manager.py  market_service.py  (+3 more)
core/: models.py
engine/: Dockerfile  config.py  executor.py  health.py  main.py  monitor.py  pipeline.py  runner.py  safety.py
frontend/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
mobile/: README.md  package.json
notifier/: Dockerfile  config.py  dispatcher.py  main.py
scripts/: backup.py  deploy.sh  migrate.py  seed_strategies.py
tests/: conftest.py
(+344 files in other folders)
